--- a/readme.adoc
+++ b/readme.adoc
@@ -1,17 +1,9 @@
-  Licensed to the Apache Software Foundation (ASF) under one or more
-  contributor license agreements.  See the NOTICE file distributed with
-  this work for additional information regarding copyright ownership.
-  The ASF licenses this file to You under the Apache License, Version 2.0
-  (the "License"); you may not use this file except in compliance with
-  the License.  You may obtain a copy of the License at
+= About
 
-      http://www.apache.org/licenses/LICENSE-2.0
+This project is the examples from Tomcat 8.5.15 release. I have added some exploration
+with Postgres DB access into the examples, along with some internal Tomcat case study.
 
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
+2017-05
 
-This is a dummy README file for the sample
-web application.
+Zemian Deng
+
