--- a/readme.adoc
+++ b/readme.adoc
@@ -1,9 +1,9 @@
 = About
 
-This project is the examples from Tomcat 8.5.15 release. I have added some exploration
-with Postgres DB access into the examples, along with some internal Tomcat case study.
+This a mavenized verison of the examples project from the original Tomcat 8.5.15 release package. 
+
+I have also added some additional files to explore JSP features, such as sql in JSTL tags etc. 
 
 2017-05
 
 Zemian Deng
-
